--- a/ClientApp/src/app/vehicle-form/vehicle-form.component.html
+++ b/ClientApp/src/app/vehicle-form/vehicle-form.component.html
@@ -7,7 +7,7 @@
 <form (ngSubmit)="submit()" #f="ngForm">
   <div class="form-group">
     <label for="make">Make</label>
-    <select id="make" class="form-control" (change)="onMakeChange()" [(ngModel)]="vehicle.makeID" name="makesID" required #make="ngModel">
+    <select id="make" class="form-control" (change)="onMakeChange()" [(ngModel)]="vehicle.makeId" name="makesId" required #make="ngModel">
       <option selected></option>
       <option *ngFor="let m of makes" value="{{ m.id }}">{{ m.name }}</option>
     </select>
@@ -16,7 +16,7 @@
 
   <div class="form-group">
     <label for="model">Model</label>
-    <select class="form-control" id="model" [(ngModel)]="vehicle.modelID" name="modelID" required #model="ngModel">
+    <select class="form-control" id="model" [(ngModel)]="vehicle.modelId" name="modelId" required #model="ngModel">
       <option selected></option>
       <option *ngFor=" let m of models " value="{{ m.id }}">{{ m.name }}</option>
     </select>
@@ -25,16 +25,16 @@
 
   <p>Is this vehicle registered?</p>
   <label for="registered" class="radio-inline">
-    <input type="radio" name="isRegistered" id="registered" value="true" [(ngModel)] ="vehicle.isRegistered" /> Yes
+    <input type="radio" name="isRegistered" id="registered" [value]="true" [(ngModel)] ="vehicle.isRegistered" /> Yes
   </label>
   <label for="notRegistered" class="radio-inline">
-    <input type="radio" name="isRegistered" id="notRegistered" value ="false" [(ngModel)] ="vehicle.isRegistered" /> No
+    <input type="radio" name="isRegistered" id="notRegistered" [value] ="false" [(ngModel)] ="vehicle.isRegistered" /> No
   </label>
 
   <h2>Feature</h2>
   <div *ngFor="let f of feachers" class="checkbox">
     <label for="feature{{f.id}}">
-      <input type="checkbox" id="feachure{{f.id}}" (change)="onFeatureToggle(f.id, $event)">{{f.name}}
+      <input type="checkbox" id="feachure{{f.id}}" (change)="onFeatureToggle(f.id, $event)" [checked]="vehicle.features.includes(f.id)">{{f.name}}
     </label>
   </div>
 
